# WheelLeg

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  LICENSE  README.md  STM32H723XG_FLASH.ld  WheelLeg.ioc  flash.cfg
Application/: CMakeLists.txt
Application/include/: tasks.hpp
Application/tasks/: TaskJoint.cpp  TaskLed.cpp  TaskReadDbus.cpp  TaskWheel.cpp  tasks.cpp
Core/Inc/: main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
Core/Src/: dma.c  fdcan.c  gpio.c  main.c  main.cpp  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
